--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta http-equiv="Content-Type" content="text/html; charset= ISO-8859-1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="<%= BASE_URL %>apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="<%= BASE_URL %>favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="<%= BASE_URL %>favicon-16x16.png"
+    />
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="<%= BASE_URL %>safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#2b5797" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="description"
+      content="Engineer Portfolio for Caleb Masters. Front-End Engineer, UX promotor, and Hobby Collector"
+    />
+    <meta
+      property="og:title"
+      content="Caleb Masters - Front-End Engineer Portfolio "
+    />
+    <meta
+      property="og:site_name"
+      content="Caleb Masters - Front-End Engineer Portfolio "
+    />
+    <meta property="og:url" content="calebmasters.dev" />
+    <meta
+      property="og:description"
+      content="Engineer Portfolio for Caleb Masters. Front-End Engineer, UX promotor, and Hobby Collector"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/calebmastersdev/image/upload/v1621282948/cmdev/og-cmd_pu7fqj.png"
+    />
+    <!--[if lt IE 9]>
+      <script>
+        document.createElement("article");
+        document.createElement("aside");
+        document.createElement("footer");
+        document.createElement("header");
+        document.createElement("nav");
+        document.createElement("section");
+        document.createElement("time");
+      </script>
+    <![endif]-->
   </head>
   <body>
     <noscript>
@@ -14,6 +75,16 @@
         properly without JavaScript enabled. Please enable it to
         continue.</strong
       >
+      <p>
+        <a
+          href="https://goo.gl/koeeaJ"
+          target="_blank"
+          rel="noopener"
+          title="Link to learn about enabling JavaScript"
+        >
+          How to enable JavaScript?
+        </a>
+      </p>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
